# iotsaRGBWSensor

./: .gitignore  README.md  RGBWSensor.ino  RGBWSensor.ino.cpp  iotsaRGBWSensor.cpp  iotsaRGBWSensor.h  iotsaRGBWSensor.ino  iotsaRGBWSensorMod.cpp  iotsaRGBWSensorMod.h  platformio.ini
.github/workflows/: build-arduino.yml  build-platformio.yml
extras/: colormeter.f3d  colormeter_box.stl  colormeter_lid.stl  colors.pages
python/: create_venv.sh  pyproject.toml  requirements.txt
python/colorMeter/: __init__.py  __main__.py  color_sensor.py
