[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "colorMeter"
version = "0.0.1"
authors = [
  { name="Jack Jansen", email="Jack.Jansen@cwi.nl" },
]
description = "Python package to get RGB and color measurements from iotsaRGBWSensor device"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dis-git/iotsaRGBWSensor"
"Bug Tracker" = "https://github.com/dis-git/iotsaRGBWSensor/issues"